--- a/LITRevu/tickets/templates/ticket_list.html
+++ b/LITRevu/tickets/templates/ticket_list.html
@@ -70,8 +70,8 @@ Tickets
           <div class="page-content">
               <h2 class="main-title">Are you sure you want to delete "<span id="itemName">"</span>?</h2>
               <div class="aligned-centered">
-                <button class="icon-hover-box" id="deleteTicketModalCancelBtn"><i class="icon-blocked"></i></button>
-                <button class="icon-hover-box" id="deleteTicketModalConfirmBtn"><i class="icon-bin"></i></button>
+                <button class="icon-hover-box" id="deleteTicketModalCancelBtn"><i class="icon-blocked validation-icon"></i></button>
+                <button class="icon-hover-box" id="deleteTicketModalConfirmBtn"><i class="icon-bin validation-icon"></i></button>
               </div>
           </div>
           <i class="icon-cross close icon-hover-box" id="deleteTicketModalCloseBtn"></i>
