--- a/LITRevu/tickets/templates/ticket_list.html
+++ b/LITRevu/tickets/templates/ticket_list.html
@@ -16,24 +16,36 @@ Tickets
 {% endblock %}
 {% block second_page_content %}
   {% if request.user.is_authenticated %}
-    <a href="{% url 'ticket_form' %}" class="icon-hover-box"><i class="icon-plus"></i><i class="icon-pen"></i></a>
+    <button type="button" id="create-ticket-btn" name="create-ticket" class="ticket-create-btn icon-hover-box" data-item-action="{% url 'ticket_form' %}"><i class="icon-plus double-icon"></i><i class="icon-pen double-icon"></i></button>
     <ul id="tickets-list">
       {% for ticket in tickets %}
         {% if not ticket.is_archived %}
         <li id="ticket-{{ ticket.pk }}">
-          <h3 class="aligned">
-          <a href="{% url 'review_list' ticket.pk %}">{{ ticket.title }}</a>
+          <div class="item-container">
+            {% if ticket.image %}
+            <div class="item-background" style="background-image:url({{ ticket.image.url }})"></div>
+            {% endif %}
+          <h3 class="aligned item-infos">
+          <a class="item-title" href="{% url 'review_list' ticket.pk %}">{{ ticket.title }}</a>
             {% if request.user == ticket.author or request.user.is_superuser %}
-              <button type="button" id="edit-ticket-btn" data-ticket-id="{{ ticket.pk }}" class="icon-hover-box"><i class="icon-pencil"></i></button>
+              <form id="editTicketForm" method="post" action="{% url 'ticket_update' ticket.pk %}">
+                {% csrf_token %}
+                <button type="button" id="edit-ticket-btn" name="edit-ticket" class="ticket-edit-btn icon-hover-box" data-item-name="{{ ticket.title }}"><i class="icon-pencil crud-btn"></i></button>
+              </form>
               <form id="deleteTicketForm" method="post" action="{% url 'ticket_delete' ticket.pk %}">
                 {% csrf_token %}
-                <button type="button" id="delete-ticket-btn" name="delete-ticket" class="ticket-delete-btn icon-hover-box" data-item-name="{{ ticket.title }}"><i class="icon-bin"></i></button>
+                <button type="button" id="delete-ticket-btn" name="delete-ticket" class="ticket-delete-btn icon-hover-box" data-item-name="{{ ticket.title }}"><i class="icon-bin crud-btn"></i></button>
               </form>
             {% endif %}
           </h3>
-          <a href="{% url 'review_list' ticket.pk %}"><p>{{ ticket.description }}</p></a>
-          <p>Created at: {{ ticket.created_at|date:"F j, Y" }} by {{ ticket.author }}</p>
-          <div class="like-container">
+          <a class="item-infos" href="{% url 'review_list' ticket.pk %}"><p>{{ ticket.description }}</p></a>
+          <div class="tag-container item-infos">
+            {% for tag in ticket.tags.all %}
+            <div class="tag">{{ tag.name }}</div>
+            {% endfor %}
+          </div>
+          <p class="item-infos">Created at: {{ ticket.created_at|date:"F j, Y" }} by {{ ticket.author }}</p>
+          <div class="like-container item-infos">
             <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
             <form id="like-form-{{ ticket.pk }}" method="post" action="{% url 'ticket_like' ticket.pk %}" class="like-block">
               {% csrf_token %}
@@ -46,7 +58,7 @@ Tickets
               <span class="dislikes-count">{{ ticket.dislikes_count }}</span>
             </form>
           </div>
-          <ul>
+          <ul class="item-infos">
             {% for review in ticket.reviews.all %}
               {% if not review.is_archived %}
                 <li>
@@ -55,6 +67,10 @@ Tickets
                 </li>
               {% endif %}
             {% endfor %}
+            <form id="createReviewForm" method="post" action="{% url 'review_create' ticket.pk %}">
+              {% csrf_token %}
+              <button type="button" id="create-review-btn" name="create-review" class="review-create-btn icon-hover-box"><i class="icon-plus double-icon"></i><i class="icon-file-text double-icon"></i></button>
+            </form>
           </ul>
         </li>
         {% endif %}
@@ -64,11 +80,12 @@ Tickets
 {% endblock %}
 
 {% block modals %}
+
 <div id="deleteTicketModal" class="modal">
   <div class="notepad margin-auto">
       <div class="page right">
           <div class="page-content">
-              <h2 class="main-title">Are you sure you want to delete "<span id="itemName">"</span>?</h2>
+              <h2 class="main-title">Are you sure you want to delete "<span id="deleteItemName"></span>"?</h2>
               <div class="aligned-centered">
                 <button class="icon-hover-box" id="deleteTicketModalCancelBtn"><i class="icon-blocked validation-icon"></i></button>
                 <button class="icon-hover-box" id="deleteTicketModalConfirmBtn"><i class="icon-bin validation-icon"></i></button>
@@ -79,6 +96,137 @@ Tickets
       <div class="spiral single-page-spiral"></div>
   </div>
 </div>
+
+<div id="editTicketModal" class="modal">
+  <div class="notepad margin-auto">
+      <div class="page right">
+          <div class="page-content">
+            <h2 class="main-title item-infos">"<span id="editItemName"></span>" ticket edition</h2>
+            {{ ticket_form.non_field_errors }}
+            <div class="item-infos">
+              <label for="{{ ticket_form.title.id_for_label }}">Title:</label>
+              {{ ticket_form.title }}
+              {% if ticket_form.title.errors %}
+                <div class="error">{{ ticket_form.title.errors }}</div>
+              {% endif %}
+            </div>
+            <div class="item-infos">
+              <label for="{{ ticket_form.description.id_for_label }}">Description:</label>
+              {{ ticket_form.description }}
+              {% if ticket_form.description.errors %}
+                <div class="error">{{ ticket_form.description.errors }}</div>
+              {% endif %}
+            </div>
+            <div class="item-infos">
+              <label for="{{ ticket_form.image.id_for_label }}">Image:</label>
+              {{ ticket_form.image }}
+              {% if ticket_form.image.errors %}
+                <div class="error">{{ ticket_form.image.errors }}</div>
+              {% endif %}
+            </div>
+            <div class="aligned-centered item-infos">
+              <button class="icon-hover-box" id="editTicketModalCancelBtn"><i class="icon-blocked validation-icon"></i></button>
+              <button class="icon-hover-box" id="editTicketModalConfirmBtn"><i class="icon-checkmark validation-icon"></i></button>
+            </div>
+          </div>
+          <i class="icon-cross close icon-hover-box" id="editTicketModalCloseBtn"></i>
+      </div>
+      <div class="spiral single-page-spiral"></div>
+  </div>
+</div>
+
+<div id="createTicketModal" class="modal">
+  <form id="createTicketForm" class="notepad margin-auto">
+    {% csrf_token %}
+    <div id="ticketFormPage" class="page left double-page-layout">
+      <div class="page-content">
+          <h2 class="main-title item-infos">Ticket creation</h2>
+          {{ ticket_form.non_field_errors }}
+          <div class="item-infos">
+            <label for="{{ ticket_form.title.id_for_label }}">Title:</label>
+            {{ ticket_form.title }}
+            {% if ticket_form.title.errors %}
+              <div class="error">{{ ticket_form.title.errors }}</div>
+            {% endif %}
+          </div>
+          <div class="item-infos">
+            <label for="{{ ticket_form.description.id_for_label }}">Description:</label>
+            {{ ticket_form.description }}
+            {% if ticket_form.description.errors %}
+              <div class="error">{{ ticket_form.description.errors }}</div>
+            {% endif %}
+          </div>
+          <div class="item-infos">
+            <label for="{{ ticket_form.tags.id_for_label }}">Tags:</label>
+            {{ ticket_form.tags }}
+            {% if ticket_form.tags.errors %}
+              <div class="error">{{ ticket_form.tags.errors }}</div>
+            {% endif %}
+          </div>
+          <div class="item-infos">
+            <label for="{{ ticket_form.image.id_for_label }}">Image:</label>
+            {{ ticket_form.image }}
+            {% if ticket_form.image.errors %}
+              <div class="error">{{ ticket_form.image.errors }}</div>
+            {% endif %}
+          </div>
+          <div class="item-infos">
+            <label for="id_create_review">Create a review:</label>
+            {{ ticket_form.create_review }}
+          </div>
+          <div class="aligned-centered item-infos">
+            <button type="button" class="icon-hover-box" id="createTicketModalCancelBtn"><i class="icon-blocked validation-icon"></i></button>
+            <button type="submit" class="icon-hover-box" id="createTicketModalConfirmBtn"><i class="icon-checkmark validation-icon"></i></button>
+          </div>
+      </div>
+  </div>      
+  <div id="reviewFormPage" class="page right double-page-layout d-none">
+    <div class="page-content">
+        <h2 class="main-title item-infos"></h2>
+        <div class="main-content">
+          <div id="reviewForm">
+            <div class="item-infos">
+              <label for="{{ ticket_form.review_title.id_for_label }}">Title:</label>
+              {{ ticket_form.review_title }}
+              {% if ticket_form.review_title.errors %}
+                <div class="error">{{ ticket_form.review_title.errors }}</div>
+              {% endif %}
+            </div>
+            <div class="item-infos">
+              <label for="{{ ticket_form.review_content.id_for_label }}">Content:</label>
+              {{ ticket_form.review_content }}
+              {% if ticket_form.review_content.errors %}
+                <div class="error">{{ ticket_form.review_content.errors }}</div>
+              {% endif %}
+            </div>
+            <div class="item-infos">
+              <label for="{{ ticket_form.review_cover_image.id_for_label }}">Image:</label>
+              {{ ticket_form.review_cover_image }}
+              {% if ticket_form.review_cover_image.errors %}
+                <div class="error">{{ ticket_form.review_cover_image.errors }}</div>
+              {% endif %}
+            </div>
+            <div class="item-infos">
+              <label for="{{ ticket_form.review_rating.id_for_label }}">Rating:</label>
+              <div class="rating">
+                {% for i in "12345" %}
+                <input type="radio" name="{{ ticket_form.review_rating.name }}" id="star{{ i }}" value="{{ i }}">
+                <label for="star{{ i }}" title="{{ i }} stars">☆</label>
+                {% endfor %}
+              </div>
+              {% if ticket_form.review_rating.errors %}
+                <div class="error">{{ ticket_form.review_rating.error }}</div>
+              {% endif %}
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <i class="icon-cross close close-left icon-hover-box" id="createTicketModalCloseBtn"></i>
+    <div id="spiralDoublePage" class="spiral double-page-spiral-modal"></div>
+  </form>
+</div>
+
 {% endblock %}
 
 {% block js %}
