--- a/LITRevu/users/static/css/users_styles.css
+++ b/LITRevu/users/static/css/users_styles.css
@@ -16,6 +16,9 @@
     max-width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
+    padding: 12px 0;
+    margin: 0;
+    border-bottom: 1px solid #ccc;
 }
 
 .button-exception {
@@ -30,4 +33,9 @@
 
 .no-margin {
     margin: 0;
+    padding: 0;
+}
+
+.margin-16 {
+    margin-left: 16px;
 }
