Rating js refacto

--- a/LITRevu/app/static/css/styles.css
+++ b/LITRevu/app/static/css/styles.css
@@ -345,6 +345,10 @@ footer p {
     display: none;
 }
 
+.rating label:last-of-type {
+    display: none;
+}
+
 .rating label {
     font-size: 2rem;
     color: #ddd;
