--- a/LITRevu/users/templates/user_list.html
+++ b/LITRevu/users/templates/user_list.html
@@ -29,6 +29,7 @@ Users
 {% endblock %}
 
 {% block js %}
+<script src="{% static 'js/modal_ajax_query.js' %}"></script>
 <script src="{% static 'js/users.js' %}"></script>
 <script src="{% static 'js/user_search.js' %}"></script>
 {% endblock %}
